--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^4.0.3",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.148.0",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.0"
   },
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.147.1"
   }
 }
