--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "earcut": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^4.0.3",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/earcut": "^2.1.1",
     "@types/three": "^0.147.1"
   }
 }
